1、优化Spring Security基本配置 2、升级mybatis-plus支持Spring boot3 4、优化Redis Cache autoconfiguration